q27/q27_pod_backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-http-backend
  labels:
    ingress-app: default
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
