q27/q27_pod_svc1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: svc1
  labels:
    ingress-app: svc1
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
