q27/q27_pod_svc2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: svc2
  labels:
    ingress-app: svc2
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
