q27/q27_service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: default
